# clipboard-manager

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/main/: generate-icon.js  index.js
src/preload/: index.js
src/renderer/: App.vue  index.html  main.js
src/renderer/assets/: main.css
src/renderer/components/: ClipboardItem.vue
src/renderer/src/: clipboardAPI.js
