[package]
name = "clipboard-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = { version = "3", features = ["image-data"] }
image = "0.25"

[build-dependencies]
tauri-build = { version = "2", features = [] }
